# leaderboards

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
programs/delegator/: Cargo.toml
programs/delegator/src/: constants.rs  events.rs  lib.rs
programs/delegator/src/instructions/: create_delegator.rs  mod.rs
programs/delegator/src/state/: delegator.rs
programs/dippies_index_protocol/: Cargo.toml
programs/dippies_index_protocol/src/: constants.rs  errors.rs  events.rs  lib.rs  seeds.rs  state.rs
programs/idea-tree/: Cargo.toml
programs/idea-tree/src/: lib.rs  seeds.rs  state.rs
programs/leaderboards/: Cargo.toml
programs/leaderboards/src/: constants.rs  events.rs  lib.rs
programs/treedea/: Cargo.toml
scripts/: createForest.ts  createRoot.ts  testToken.ts
tests/: delegator.ts  dippiesIndexProtocol.ts  idea-tree.ts  leaderboards.ts  treedea.ts  utils.ts
ts/: account.ts  constants.ts  dippies_index_protocol.json  dippies_index_protocol.ts  forest.ts  index.ts  leaderboards.json  leaderboards.ts  node.ts  note.ts  pda.ts  programId.ts  root.ts  stakeState.ts  tree.ts  treedeaTree.ts  types.ts  utils.ts
ts/accounts/: Bribe.ts  BribeClaim.ts  Forest.ts  Node.ts  Note.ts  Root.ts  StakeAccount.ts  StakeState.ts  Tree.ts  index.ts
ts/errors/: custom.ts
ts/instructions/: attachNode.ts  attachNote.ts  claimBribe.ts  closeStake.ts  createForest.ts  createNode.ts  createNote.ts  createRoot.ts  createStake.ts  createTree.ts  index.ts  moveNote.ts  replaceNode.ts  replaceNote.ts  setBribe.ts  setForest.ts  setRoot.ts  updateStake.ts
(+67 files in other folders)
